[tool.poetry]
name = "command"
version = "0.1.0"
description = ""
authors = ["esio <esiokao@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.11"
python-generate-mac = "^1.3.1"
scapy = "^2.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
